<resources>
    <string name="app_name">OrderMenu</string>
    <string name="title_activity_menu_order">Order</string>
    <string name="title_activity_tables">Tables</string>
    <string name="title_activity_menu">Menu</string>
    <string name="login_hint_password">Password</string>
    <string name="login_hint_email">Email</string>
    <string name="login_btn_text">Log in</string>
    <string name="login_welcome_text">Welcome to OrderMenu</string>
    <string name="login_please_log_in_text">Please log in to continue</string>
    <string name="login_register">Register</string>
    <string name="login_not_filled">You didn\'t fill in all the fields</string>
    <string name="search">Search</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="review_order">Review Order</string>
    <string name="toolbar_add_to_order">Add to order</string>
    <string name="toolbar_review_order">Review order</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="order">Order</string>
    <string name="question_clear_table">Are you sure you want to clear table order?</string>
    <string name="question_order_ready">Mark order as ready?</string>
    <string name="question_restore_order">Restore this order?</string>
    <string name="menu">Menu</string>
    <string name="log_out">Log out</string>
    <string name="toolBarTables">Tables</string>
    <string name="Menu_list">Menu list</string>
    <string name="title_activity_order_history">Order History</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="orders">Orders</string>
    <string name="section">section</string>
    <string name="table">table</string>
    <string name="start_time">start time</string>
    <string name="end_time">end time</string>
    <string name="restore">restore</string>
    <string name="table_not_free">The table is not free, make sure you have selected the correct order to restore or clear the table</string>
    <string name="exit_discrd_order">New items have been selected but order has not been submitted. Continue and discard the new selected items?</string>
    <string name="order_move_info">The table is not free, make sure you have selected the correct table</string>
    <string name="warning">Warning</string>
    <string name="dialog_yes">yes</string>
    <string name="dialog_no">No</string>
    <string name="clear_table">Clear table</string>
    <string name="served_table">Served order</string>
    <string name="add_order">Add order</string>
    <string name="cancel_order">Cancel order</string>
    <string name="move_order">Move order</string>
    <string name="title_activity_order_move">Move to</string>
    <string name="move_to">Move to</string>
    <string name="table_move">\n table:&#160;</string>
    <string name="from_move">\n from:&#160;</string>
    <string name="ok">OK</string>
    <string name="order_in_progress">In Progress</string>
    <string name="order_already_served">Already served</string>
    <string name="order_clear_not_served">Order needs to be served or canceled in order to clear table</string>


</resources>
